# myIM

./: CMakeCache.txt  CMakeLists.txt  c.sh
base/: FriendModel.h  GroupModel.h  MessageQueue.cpp  MessageQueue.h  Singleton.h  TcpSession.h  UserModel.h  chatHandler.cpp  chatHandler.h  connMysql.cpp  connMysql.h  makefile  msg.h  offlineMsgModel.h  redis.h  tcpSession.cpp  test  test.cpp
etc/: mySqlConf.json
others/: build.sql  msgType  test.sql
server/: main.cpp
test/: main.cc  test.cpp
